# rwh

./: .bookmark  .gitignore  Experimental-haskell.cabal  cabal.config  lets-get-started.md  test
notes/: 001-enviroment.md  002-ghc.md  003-booleans.md  005-polymorphic-constants-in-ghci.md  007-types.md  010-.md  011-strict-vs-non-strict.md  012-new-data-types.md  013-type-keyword.md  014-algebraic-data-types.md  015-pattern-matching.md  016-record-syntax.md  017-check-back-list.md  018-Parameterised-types.md  019-recursive-types.md  020-erroring-in-haskell.md  021-local-variables.md  022-whitespace.md  023-case-expression-style-question.md  024-conditional-guards.md  025-kind-system.md  026-challenges-of-functional-programming.md  027-lines-and-text-mode.md  028-infix-and-prefix.md  029-partial-functions.md  030-notes-from-ch04.md  031-notes-from-ch05.md  032-notes-from-ch06.md  033-notes-from-ch07.md  034-notes-from-11.md  035-notes-from-13.md  036-notes-from-14.md  037-notes-from-haskell-class1.md  038-notes-from-15.md  039-notes-from-17.md  040-notes-from-19.md  041-high-level-notes-from-26-and-20.md  042-concurrent-and-multicore-programming.md  043-profiling.md  044-stm.md  (+6 more)
src/: lastButOne.hs  myDrop.hs
src/ch01/: WC.hs
src/ch03/: exercises.hs  maybeTree.hs
src/ch04/: InteractWith.hs  MyFilter.hs  MyFolds.hs
src/ch05/: JSONLib.hs  Main.hs  Prettify.hs  PrettyJSON.hs  PrettyStub.hs  PutJSON.hs  mypretty.cabal
src/ch06/: AutomaticDerivation.hs  JSONClass.hs  NewtypeDifference.hs  eqclasses.hs
src/ch07/: actions.hs  actions2.hs  basicio-nodo.hs  filter.hs  (+6 more)
(+35 files in other folders)
